<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="apde_app_title">APDE</string>
	<string name="title_activity_editor">APDE</string>
	<string name="editor_menu_save_sketch">Save Sketch</string>
	<string name="editor_menu_load_sketch">Load Sketch</string>
	<string name="editor_menu_run_sketch">Run</string>
	<string name="editor_menu_stop_sketch">Stop</string>
	<string name="editor_menu_comp_select_app">App</string>
	<string name="editor_menu_comp_select_wallpaper">Wallpaper</string>
	<string name="editor_menu_comp_select_watchface">Watchface</string>
	<string name="editor_menu_comp_select_vr">VR</string>
	<string name="editor_menu_comp_select_preview">Preview</string>
	<string name="editor_menu_undo">Undo</string>
	<string name="editor_menu_redo">Redo</string>
	<string name="editor_menu_tools">Tools</string>
	<string name="editor_menu_new_sketch">New Sketch</string>
	<string name="editor_menu_rename_sketch">Rename Sketch</string>
	<string name="editor_menu_delete_sketch">Delete Sketch</string>
	<string name="editor_menu_open_sketch_properties">Sketch Properties</string>
	<string name="editor_menu_copy_to_sketchbook">Copy to Sketchbook</string>
	<string name="editor_menu_move_temp_to_sketchbook">Move to Sketchbook</string>
	<string name="editor_menu_copy_sketch">Copy Sketch</string>
	<string name="editor_menu_tab_new">New Tab</string>
	<string name="editor_menu_tab_rename">Rename Tab</string>
	<string name="editor_menu_tab_delete">Delete Tab</string>
	<string name="title_activity_settings">Settings</string>
	<string name="menu_open_settings">Settings</string>
	<string name="title_activity_sketch_properties">Sketch Properties</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="create">Create</string>
	<string name="overflow_more">More</string>
	<string-array name="empty"></string-array>
	<string name="external_storage_unavailable_dialog_title">External Storage Unavailable</string>
	<string name="external_storage_unavailable_dialog_message">The sketch cannot be saved because the external storage on your device is either unavailable or unwritable.</string>
	<string name="message_sketch_save_success">The sketch has been saved.</string>
	<string name="message_sketch_save_failure">The sketch has not been saved properly.</string>
	<string name="tab_name_invalid_first_char">Error: Tab names must not start with a number or an underscore!</string>
	<string name="tab_name_invalid_char">Error: Tab names may contain only letters, numbers, and underscores!</string>
	<string name="tab_name_invalid_no_char">Error: Tab names must contain text!</string>
	<string name="tab_name_invalid_same_title">Error: This tab already exists!</string>
	<string name="sketch_name_invalid_dialog_title">Invalid Name</string>
	<string name="sketch_name_invalid_dialog_message_no_char">Sketch names must contain text!</string>
	<string name="sketch_name_invalid_dialog_message_first_char">Sketch names must not start with a number or an underscore!</string>
	<string name="sketch_name_invalid_dialog_message_invalid_char">Sketch names may contain only letters, numbers, and underscores!</string>
	<string name="sketch_name_invalid_first_char">Error: Sketch names must not start with a number or an underscore!</string>
	<string name="sketch_name_invalid_char">Error: Sketch names may contain only letters, numbers, and underscores!</string>
	<string name="sketch_name_invalid_no_char">Error: Sketch names must contain text!</string>
	<string name="folder_name_invalid_folder_no_text">Folder names must contain text!</string>
	<string name="folder_name_folder_invalid_char">Folder names may contain only letters, numbers, underscores and spaces!</string>
	<string name="tab_new_dialog_title">New Tab</string>
	<string name="tab_new_dialog_message">Enter the name for the new tab:</string>
	<string name="tab_new_success">The tab has been created.</string>
	<string name="tab_delete_dialog_title">Delete Tab?</string>
	<string name="tab_delete_dialog_message">Are you sure you want to delete this tab?</string>
	<string name="tab_delete_success">The tab has been deleted.</string>
	<string name="tab_rename_dialog_title">Rename Tab</string>
	<string name="tab_rename_dialog_message">Enter the new name for the tab:</string>
	<string name="tab_rename_success">The tab has been renamed.</string>
	<string name="drawer_folder_sketches">Sketches</string>
	<string name="drawer_folder_examples">Examples</string>
	<string name="drawer_folder_library_examples">Library Examples</string>
	<string name="drawer_folder_temporary">Temporary</string>
	<string name="drawer_folder_recent">Recent</string>
	<string name="drawer_open_accessibility_text">Load Sketch</string>
	<string name="drawer_close_accessibility_text">Return to Sketch</string>
	<string name="drawer_list_icon_accessibility_text">Icon</string>
	<string name="delete_sketch_dialog_title">Delete \&quot;<xliff:g example="testSketch" id="sketchName">%1$s</xliff:g>\&quot;?</string>
	<string name="delete_sketch_dialog_message">Are you sure you want to delete \&quot;<xliff:g example="testSketch" id="sketchName">%1$s</xliff:g>\&quot;?</string>
	<string name="build_message_begin">Building sketch…</string>
	<string name="build_message_gen_project">Creating Android Project…</string>
	<string name="build_message_run_aapt">Packaging resources…</string>
	<string name="build_message_run_ecj">Compiling…</string>
	<string name="build_message_run_dx">Dexing compiled files…</string>
	<string name="build_message_run_apkbuilder">Building APK file…</string>
	<string name="build_message_run_zipsigner_debug">Signing APK with a debug certificate…</string>
	<string name="build_message_run_zipsigner_export">Signing APK with a private certificate…</string>
	<string name="build_message_run_sketch">Running the sketch…</string>
	<string name="build_message_send_to_watch">Sending sketch to watch…</string>
	<string name="build_message_failed">Build failed, check the console for more information.</string>
	<string name="build_message_stopped_early">Build stopped before sketch was launched.</string>
	<string name="build_message_preview_launch">Launching sketch preview…</string>
	<string name="file_chooser_title">Select File</string>
	<string name="tool_auto_format">Auto Format</string>
	<string name="tool_auto_format_success">Auto Format Completed</string>
	<string name="tool_comment_uncomment">Comment/Uncomment</string>
	<string name="tool_increase_indent">Increase Indent</string>
	<string name="tool_decrease_indent">Decrease Indent</string>
	<string name="toggle_char_inserts_accessibility_text">Toggle Character Tray</string>
	<string name="toggle_problem_overview_accessibility_text">Toggle Problem Overview</string>
	<string name="title_activity_character_tray_settings">Special Character Tray</string>
	<string name="tool_import_library">Import Library</string>
	<string name="library_manager_no_contributed_libraries">Libraries folder is empty</string>
	<string name="library_manager_open">Manage Libraries</string>
	<string name="title_activity_library_manager">Library Manager</string>
	<string name="library_manager_menu_install_zip_library">Install Compressed Library</string>
	<string name="library_manager_install_select_library_zip">Select Library Archive</string>
	<string name="library_manager_install_dialog_title">Installing</string>
	<string name="library_manager_install_message_copying">Copying</string>
	<string name="library_manager_install_message_extracting">Extracting</string>
	<string name="library_manager_install_message_dexing">Dexing</string>
	<string name="library_manager_contrib_menu_uninstall">Uninstall</string>
	<string name="library_manager_contrib_uninstall_warning_title">Uninstall</string>
	<string name="library_manager_contrib_uninstall_warning_message">will be uninstalled.</string>
	<string name="library_manager_library_uninstall_dialog_title">Uninstalling</string>
	<string name="library_manager_install_invalid_file_error_title">Invalid File</string>
	<string name="library_manager_install_invalid_file_error_message_nonexistant">The requested file does not exist. Try using a different file manager.</string>
	<string name="library_manager_install_invalid_file_error_message_not_zip">The requested file is not a ZIP archive.</string>
	<string name="library_manager_install_invalid_file_error_message_already_installed">The requested library has already been installed.</string>
	<string name="library_manager_menu_get_libraries">Get Libraries</string>
	<string name="task_run_in_background">Run in Background</string>
	<string name="tool_color_selector">Color Selector</string>
	<string name="tool_color_selector_red">Red</string>
	<string name="tool_color_selector_green">Green</string>
	<string name="tool_color_selector_blue">Blue</string>
	<string name="tool_color_selector_hue">Hue</string>
	<string name="tool_color_selector_saturation">Saturation</string>
	<string name="tool_color_selector_brightness">Brightness</string>
	<string name="tool_color_selector_red_initial">R:</string>
	<string name="tool_color_selector_green_initial">G:</string>
	<string name="tool_color_selector_blue_initial">B:</string>
	<string name="tool_color_selector_hue_initial">H:</string>
	<string name="tool_color_selector_saturation_initial">S:</string>
	<string name="tool_color_selector_brightness_initial">B:</string>
	<string name="tool_color_selector_copy_hex_to_clipboard">Copy Hex to Clipboard</string>
	<string name="tool_color_selector_hex_color">Hex Color</string>
	<string name="tool_color_selector_copy_hex_to_clipboard_success">Hex color data copied to clipboard.</string>
	<string name="drawer_folder_empty">Folder is empty</string>
	<string name="drawer_new_folder">New Folder</string>
	<string name="drawer_edit_folder">Rename Folder</string>
	<string name="drawer_delete_folder">Delete Folder</string>
	<string name="drawer_delete_folder_dialog_title">Delete \&quot;<xliff:g example="testSketch" id="sketchName">%1$s</xliff:g>\&quot;?</string>
	<string name="drawer_delete_folder_dialog_message">Are you sure you want to delete folder \&quot;<xliff:g example="testFolder" id="folderName">%1$s</xliff:g>\&quot;?</string>
	<string name="export_signed_package_keystore_file">Keystore</string>
	<string name="export_signed_package_keystore_file_select">Select Keystore File</string>
	<string name="export_signed_package_keystore_new">Create Keystore</string>
	<string name="export_signed_package_keystore_password">Keystore Password</string>
	<string name="export_signed_package_keystore_password_confirm">Confirm Keystore Password</string>
	<string name="export_signed_package_key_alias_new">Create Key</string>
	<string name="export_signed_package_key_alias_password">Key Password</string>
	<string name="export_signed_package_certificate_name">First and Last Name:</string>
	<string name="export_signed_package_certificate_organizational_unit">Organizational Unit:</string>
	<string name="export_signed_package_certificate_organization">Organization:</string>
	<string name="export_signed_package_certificate_city">City or Locality:</string>
	<string name="export_signed_package_certificate_state">State or Province:</string>
	<string name="export_signed_package_certificate_country">Country Code (XX):</string>
	<string name="export_signed_package_certificate_info">Certificate Info</string>
	<string name="export_signed_package_certificate_info_expiration_date">Expiration Date:</string>
	<string name="export_signed_package_certificate_info_key_alias">Key Alias:</string>
	<string name="library_manager_menu_dx_dexer">DX Dexer</string>
	<string name="dx_dexer_input_file">Input File</string>
	<string name="dx_dexer_output_file">Output File</string>
	<string name="dx_dexer_select_input_file">Select Input File</string>
	<string name="dx_dexer_select_output_file">Select Output File</string>
</resources>