<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/menu_run"
        android:icon="@drawable/ic_run_white"
        app:showAsAction="ifRoom"
        android:title="@string/editor_menu_run_sketch" />
	<item
		android:id="@+id/menu_comp_select"
		android:icon="@drawable/ic_comp_app"
		app:showAsAction="ifRoom"
		android:title="@string/editor_menu_comp_select_app">
		
		<menu>
			<item
				android:id="@+id/menu_comp_select_app"
				android:title="@string/editor_menu_comp_select_app"
				android:icon="@drawable/ic_comp_app" />
			<item
				android:id="@+id/menu_comp_select_wallpaper"
				android:title="@string/editor_menu_comp_select_wallpaper"
				android:icon="@drawable/ic_comp_wallpaper" />
			<item
				android:id="@+id/menu_comp_select_watchface"
				android:title="@string/editor_menu_comp_select_watchface"
				android:icon="@drawable/ic_comp_watchface" />
			<item
				android:id="@+id/menu_comp_select_vr"
				android:title="@string/editor_menu_comp_select_vr"
				android:icon="@drawable/ic_comp_vr" />
		</menu>
	</item>
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/ic_stop_white"
        app:showAsAction="ifRoom"
        android:title="@string/editor_menu_stop_sketch" />
    <item
        android:id="@+id/menu_undo"
        android:icon="@drawable/ic_undo_white"
        app:showAsAction="ifRoom"
        android:title="@string/editor_menu_undo" />
    <item
        android:id="@+id/menu_redo"
        android:icon="@drawable/ic_redo_white"
        app:showAsAction="ifRoom"
        android:title="@string/editor_menu_redo" />
    <item
        android:id="@+id/menu_sketch_properties"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/editor_menu_open_sketch_properties" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_open_settings" />
	<item
		android:id="@+id/menu_new"
		app:showAsAction="never"
		android:title="@string/editor_menu_new_sketch" />
	<item
		android:id="@+id/menu_load"
		app:showAsAction="never"
		android:title="@string/editor_menu_load_sketch" />
    <item
        android:id="@+id/menu_save"
        app:showAsAction="never"
        android:title="@string/editor_menu_save_sketch" />
    <item
        android:id="@+id/menu_copy_to_sketchbook"
        app:showAsAction="never"
        android:title="@string/editor_menu_copy_to_sketchbook" />
	<item
		android:id="@+id/menu_move_to_sketchbook"
		app:showAsAction="never"
		android:title="@string/editor_menu_move_temp_to_sketchbook" />
	<item
		android:id="@+id/menu_rename"
		app:showAsAction="never"
		android:title="@string/editor_menu_rename_sketch" />
	<item android:id="@+id/menu_delete"
		  app:showAsAction="never"
		  android:title="@string/editor_menu_delete_sketch" />
    <item
        android:id="@+id/menu_tab_new"
        app:showAsAction="never"
        android:title="@string/editor_menu_tab_new" />
    <item
        android:id="@+id/menu_tab_rename"
        app:showAsAction="never"
        android:title="@string/editor_menu_tab_rename" />
    <item
        android:id="@+id/menu_tab_delete"
        app:showAsAction="never"
        android:title="@string/editor_menu_tab_delete" />
    <item
        android:id="@+id/menu_tools"
        app:showAsAction="never"
        android:title="@string/editor_menu_tools" />
</menu>