<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/export_signed_package"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >
            
            <ImageButton
                android:id="@+id/keystore_file_select"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/keystore_new"
                android:contentDescription="@string/export_signed_package_keystore_file_select"
                android:scaleType="centerInside"
                android:src="@drawable/ic_folder_white" />
            
            <ImageButton
                android:id="@id/keystore_new"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/export_signed_package_keystore_new"
                android:scaleType="centerInside"
                android:src="@drawable/ic_new_white" />
            
            <AutoCompleteTextView
                android:id="@+id/keystore_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/keystore_file_select"
                android:completionThreshold="1"
                android:hint="@string/export_signed_package_keystore_file"
                android:inputType="textUri"
                android:dropDownWidth="wrap_content" />
        </RelativeLayout>
        
        <EditText
            android:id="@+id/keystore_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:hint="@string/export_signed_package_keystore_password"
            android:inputType="textPassword" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >
            
            <ImageButton
                android:id="@+id/alias_certificate_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/alias"
                android:layout_alignTop="@+id/alias"
                android:layout_toLeftOf="@+id/alias_new"
                android:contentDescription="@string/export_signed_package_certificate_info"
                android:scaleType="centerInside"
                android:src="@drawable/ic_info_white" />
            
            <ImageButton
                android:id="@id/alias_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/alias"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/alias"
                android:contentDescription="@string/export_signed_package_key_alias_new"
                android:scaleType="centerInside"
                android:src="@drawable/ic_new_white" />
            
            <Spinner
                android:id="@id/alias"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/alias_certificate_info" />
        </RelativeLayout>
        
        <EditText
            android:id="@+id/alias_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:hint="@string/export_signed_package_key_alias_password"
            android:inputType="textPassword" />
        
        <TextView
            android:id="@+id/export_signed_package_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:textIsSelectable="true"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>