<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >
            
            <ImageButton
                android:id="@+id/dx_dexer_input_file_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/dx_dexer_input_file"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/dx_dexer_input_file"
                android:contentDescription="@string/dx_dexer_select_input_file"
                android:scaleType="centerInside"
                android:src="@drawable/ic_folder_white" />
            
            <EditText
                android:id="@id/dx_dexer_input_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/dx_dexer_input_file_select"
                android:hint="@string/dx_dexer_input_file"
                android:inputType="textUri" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal" >
            
            <ImageButton
                android:id="@+id/dx_dexer_output_file_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/dx_dexer_output_file"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/dx_dexer_output_file"
                android:contentDescription="@string/dx_dexer_select_output_file"
                android:scaleType="centerInside"
                android:src="@drawable/ic_select_file" />
            
            <EditText
                android:id="@id/dx_dexer_output_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/dx_dexer_output_file_select"
                android:hint="@string/dx_dexer_output_file"
                android:inputType="textUri" />
        </RelativeLayout>
        
        <TextView
            android:id="@+id/dx_dexer_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</ScrollView>